My second commit

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://saket2508.github.io/React-Unsplash-Gallery-App",
+  "homepage": "http://Anuragsingh691.github.io/React-js-Image-gallery-app-with-unsplash-",
   "name": "gallery-app",
   "version": "0.1.0",
   "private": true,
